Added task to create a full dist with the complete jar. Also, fixed eol for bash and conf files.

--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,11 @@ jar {
         )
     }
 }
+
+task copyJarToDist(type: Copy) {
+    from jar
+    from "src/dist"
+    into "build/full-dist"
+}
+
+task buildJarWithConfig(dependsOn: [jar, copyJarToDist])
